# ESP_software

./: 000_gui.h  CMakeLists.txt  I2C.h  README.md  act_class.h  common_includes.h  expander.cpp  expander.h  font.c  font.cpp  graphics.h  gui_btns.c  gui_class.h  header.h  idf_component.yml  main.c  main.cpp  misc.cpp  nvs_stuff.cpp  sdkconfig.backup  sen_class.h  task_actuator.cpp  task_comm.cpp  task_controller.c  task_encoder.c  task_encoder.cpp  task_gui.c  task_gui.cpp  task_lcd.cpp  task_regulator.cpp  task_sensor.cpp  task_test.c  task_visual.c  task_visual.cpp  vis_class.h  visual.c
000_gui/: gui_editor.cpp  gui_fields.cpp  gui_main.cpp  gui_menu.cpp  gui_pages.cpp  gui_qr_code.h
